<resources>
    <string name="app_name">Four Color Game</string>
    <string name="puzzle_mode_text">Puzzle Mode</string>
    <string name="multiplayer_text">Two-Player Mode</string>
    <string name="vs_ai_text">Vs. Computer Player</string>
    <string name="start">Start!</string>
    <string name="color_picker_title">Choose Your Colors:</string>
    <string name="title_activity_loading_screen">LoadingScreen</string>
    <string name="loading">Loading...</string>
    <string name="okay">Okay</string>
    <string name="help_color_picker">Click on the squares to choose your colors for the map.\n\nNo two colors can be the same.\n\nPress Start when ready.</string>
    <string name="help_game_details">Small: 15 regions\nMedium: 20 regions\nLarge: 30 regions\nCustom: Choose the number of regions</string>
    <string name="help_title_screen">Puzzle Mode: Fill in the map using four colors. Adjacent regions must be different colors
                                    \n\nVs. Computer: Fill in the most regions with your two colors
                                    \n\nMultiplayer: Pass and Play - Fill in the most regions with your two colors</string>
    <string name="back_button_desc">Back Button</string>
    <string name="help_button_desc">Help Button</string>
    <string name="map_size">Choose the map size:</string>
    <string name="small_map">Small</string>
    <string name="medium_map">Medium</string>
    <string name="large_map">Large</string>
    <string name="custom_map">Custom</string>
    <string name="next">Next</string>
    <string name="computer_skills">Computer Player Difficulty:</string>
    <string name="easy_mode">Easy</string>
    <string name="hard_mode">Hard</string>
    <string name="regions">Regions:</string>
    <string name="cancel">Cancel</string>
    <string name="invalidMove">Invalid Move!</string>
    <string name="game_over">Game Over</string>
    <string name="you_win">You Win!</string>
    <string name="home">Home</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you">You</string>
    <string name="computer">Computer</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="no_more_moves">No More Moves</string>
    <string name="are_you_sure">Are you sure you want to quit the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="player_one_wins">Player One wins!</string>
    <string name="player_two_wins">Player Two wins!</string>
    <string name="tie_game">It\'s a tie!</string>
    <string name="play_again">Play Again</string>
    <string name="computer_wins">You lost!</string>
    <string name="how_to_play">How to Play</string>
    <string name="map_size_help">Map Size</string>
    <string name="comp_player">Computer</string>

</resources>
